# tuile

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md
docs/superpowers/plans/: 2026-04-18-virtual-buffer-scrollview.md  2026-04-19-dropdown-flip-above.md
docs/superpowers/specs/: 2026-04-18-virtual-buffer-scrollview-design.md  2026-04-19-dropdown-flip-above-design.md
src/: action.rs  component.rs  event.rs  focus.rs  lib.rs  scroll_content.rs  validation.rs
src/containers/: form.rs  grid.rs  hstack.rs  mod.rs  modal.rs  overlay.rs  scroll_view.rs  tabs.rs  vstack.rs
src/theme/: contrast.rs  mod.rs  tokens.rs
src/widgets/: calendar.rs  date_field.rs  dollar_field.rs  dropdown.rs  float_field.rs  int_field.rs  list.rs  mod.rs  radio.rs  status_bar.rs  table.rs  text.rs  text_field.rs  toggle.rs
